--- a/hpc_conf/SLURM.test.conf
+++ b/hpc_conf/SLURM.test.conf
@@ -3,7 +3,7 @@
 gridtype=SLURM
 
 # template for a grid submission
-cmd=sbatch -p queue_name --mem=10000 --time=02:00:00 
+cmd=sbatch -p debug --time=12:00:00 --exclusive --nodes=1
 
 # note -e error.file -o out.file are set internally, so dont set them in the above cmd.
 
@@ -12,10 +12,10 @@ cmd=sbatch -p queue_name --mem=10000 --time=02:00:00
 ##########################################################################################
 
 # number of grid submissions to be maintained at steady state by the Trinity submission system 
-max_nodes=4000
+max_nodes=4
 
 # number of commands that are batched into a single grid submission job.
-cmds_per_node=20
+cmds_per_node=2
 
 
 ####   IMPORTANT ##############
